--- a/config/locales/activerecord/ru.yml
+++ b/config/locales/activerecord/ru.yml
@@ -15,7 +15,7 @@ ru:
       brand:
         created_at: "время создания"
         updated_at: "время изменения"
-        item_count: "количество товаров"
+        items_count: "количество товаров"
         name: "название"
         slug: "идентификатор"
         image: "картинка"
