--- a/config/locales/views/ru.yml
+++ b/config/locales/views/ru.yml
@@ -1,1 +1,6 @@
 ru:
+  categories:
+    update:
+      success: "Категория успешно изменена"
+    delete:
+      success: "Категория успешно удалена"
