--- a/config/locales/views/ru.yml
+++ b/config/locales/views/ru.yml
@@ -4,3 +4,8 @@ ru:
       success: "Категория успешно изменена"
     delete:
       success: "Категория успешно удалена"
+  brands:
+    update:
+      success: "Производитель успешно изменён"
+    delete:
+      success: "Производитель успешно удалён"
