Items controller without setting categories

--- a/config/locales/views/ru.yml
+++ b/config/locales/views/ru.yml
@@ -9,3 +9,8 @@ ru:
       success: "Производитель успешно изменён"
     delete:
       success: "Производитель успешно удалён"
+  items:
+    update:
+      success: "Товар успешно изменён"
+    delete:
+      success: "Товар успешно удалён"
