Links for administrator

--- a/config/locales/common/ru.yml
+++ b/config/locales/common/ru.yml
@@ -2,3 +2,4 @@ ru:
   invalid_credentials: "Неправильный логин или пароль"
   please_log_in: "Авторизуйтесь, пожалуйста"
   insufficient_role: "Не хватает прав"
+  nothing_found: "Ничего не нашлось"
