Part of main layout and options partial

--- a/config/locales/common/ru.yml
+++ b/config/locales/common/ru.yml
@@ -3,3 +3,4 @@ ru:
   please_log_in: "Авторизуйтесь, пожалуйста"
   insufficient_role: "Не хватает прав"
   nothing_found: "Ничего не нашлось"
+  create: "Создать"
