--- a/config/locales/common/ru.yml
+++ b/config/locales/common/ru.yml
@@ -4,3 +4,14 @@ ru:
   insufficient_role: "Не хватает прав"
   nothing_found: "Ничего не нашлось"
   create: "Создать"
+  submit: "Отправить"
+  edit: "Редактировать"
+  delete: "Удалить"
+  current_image: "Текущая картинка"
+  error:
+    zero: "ошибок нет"
+    one: "%{count} ошибка"
+    few: "%{count} ошибки"
+    many: "%{count} ошибок"
+    other: "%{count} ошибок"
+  list: "К списку"
