--- a/config/locales/views/ru.yml
+++ b/config/locales/views/ru.yml
@@ -7,6 +7,8 @@ ru:
     index:
       title: "Категории, страница %{page}"
       header: "Категории"
+    new:
+      title: "Создать категорию товара"
   brands:
     update:
       success: "Производитель успешно изменён"
