Adding and viewing category

--- a/config/locales/common/ru.yml
+++ b/config/locales/common/ru.yml
@@ -15,3 +15,9 @@ ru:
     many: "%{count} ошибок"
     other: "%{count} ошибок"
   list: "К списку"
+  not_selected: "Не выбрано"
+  created_at: "Время создания"
+  updated_at: "Последнее изменение"
+  are_you_sure: "Вы уверены?"
+  "yes": "да"
+  "no": "нет"
