--- a/config/locales/views/ru.yml
+++ b/config/locales/views/ru.yml
@@ -9,6 +9,8 @@ ru:
       header: "Категории"
     new:
       title: "Создать категорию товара"
+    show:
+      title: "Категория товаров «%{name}»"
   brands:
     update:
       success: "Производитель успешно изменён"
