Initial list of categories in menu

--- a/config/locales/common/ru.yml
+++ b/config/locales/common/ru.yml
@@ -21,3 +21,8 @@ ru:
   are_you_sure: "Вы уверены?"
   "yes": "да"
   "no": "нет"
+  view: "В просмотр"
+  notice: "Уведомление"
+  warning: "Предупреждение"
+  alert: "Внимание"
+  
