--- a/config/locales/views/ru.yml
+++ b/config/locales/views/ru.yml
@@ -11,6 +11,8 @@ ru:
       title: "Создать категорию товара"
     show:
       title: "Категория товаров «%{name}»"
+    edit:
+      title: "Редактирование категории"
   brands:
     update:
       success: "Производитель успешно изменён"
