--- a/config/locales/views/ru.yml
+++ b/config/locales/views/ru.yml
@@ -21,6 +21,12 @@ ru:
     index:
       title: "Производители, страница %{page}"
       header: "Производители"
+    new:
+      title: "Добавление производителя"
+    show:
+      title: "Производитель «%{name}»"
+    edit:
+      title: "Редактирование производителя"
   items:
     update:
       success: "Товар успешно изменён"
