Managing items without categories

--- a/config/locales/activerecord/ru.yml
+++ b/config/locales/activerecord/ru.yml
@@ -29,6 +29,7 @@ ru:
         name: "название"
         slug: "идентификатор"
         image: "картинка"
+        visible: "показывать"
         description: "описание"
       brand_category:
         brand_id: "производитель"
