Some markup for list of categories in menu

--- a/config/locales/views/ru.yml
+++ b/config/locales/views/ru.yml
@@ -13,6 +13,8 @@ ru:
       title: "Категория товаров «%{name}»"
     edit:
       title: "Редактирование категории"
+    menu:
+      categories: "Категории"
   brands:
     update:
       success: "Производитель успешно изменён"
