List of categories in shop

--- a/config/locales/views/ru.yml
+++ b/config/locales/views/ru.yml
@@ -79,3 +79,7 @@ ru:
   admin:
     index:
       title: "Администрирование"
+  shop:
+    categories:
+      index:
+        title: "Категории товаров"
