see #1, list of items with links to item page

--- a/config/locales/views/ru.yml
+++ b/config/locales/views/ru.yml
@@ -83,3 +83,7 @@ ru:
     categories:
       index:
         title: "Категории товаров"
+    items:
+      index:
+        title: "Все товары, страница %{page}"
+        header: "Все товары"
