Price and brand for items in list

--- a/config/locales/views/ru.yml
+++ b/config/locales/views/ru.yml
@@ -87,3 +87,5 @@ ru:
       index:
         title: "Все товары, страница %{page}"
         header: "Все товары"
+      preview:
+        add_to_cart: "Добавить в корзину"
