Showing list of items in cart

--- a/config/locales/views/ru.yml
+++ b/config/locales/views/ru.yml
@@ -94,3 +94,7 @@ ru:
     carts:
       cart:
         view_cart: "Посмотреть корзину"
+      show:
+        title: "Ваша корзина"
+        items: "Товары"
+        empty: "В корзине пусто"
