see #3, saving order

--- a/config/locales/views/ru.yml
+++ b/config/locales/views/ru.yml
@@ -98,3 +98,6 @@ ru:
         title: "Ваша корзина"
         items: "Товары"
         empty: "В корзине пусто"
+        proceed_with_order: "Перейти к оформлению заказа"
+      edit:
+        title: "Оформление заказа"
