fix #4, editing oeders

--- a/config/locales/views/ru.yml
+++ b/config/locales/views/ru.yml
@@ -62,6 +62,8 @@ ru:
       title: "Заказ №%{number}"
       items: "Товары"
       contact: "Контактные данные"
+    edit:
+      title: "Редактирование заказа"
   shared:
     flash_messages:
       notice: "Замечание"
